--- a/css/styles.css
+++ b/css/styles.css
@@ -1,47 +1,51 @@
-
+.paragraph1 {
+  text-align: justify;
+  color: #F1C313
+  width: 300px;
+  border: 1px solid green;
+  padding: 50px;
+  margin: 20px;
 }
+
 .column {
   width: 350px;
-  float: left;
+  text-align: center;
 }
 
 .test-box {
   padding: 6px;
   margin: 20px;
-  background-color: #F1F14E;
+}
 
-
+.contacts {
+  padding: 6px;
+  margin: 20px;
+  background-color: blue;
 }
 
 body {
-  background-image: url('background.jpg')
-  background-repeat: no-repeat;
-  background-position: center;
-  background-attachment: scroll;
-
-
+  background-color: grey;
 }
 h1 {
   color: white;
   text-align: center;
-
 }
 h2 {
   color: black;
   text-align: center;
-
 }
 p {
+  color: black;
   font-family: verdana;
   font-size: 20px;
   text-align: center;
-
 }
 img {
   align-self: center;
 }
-background-image {
-  background-image: url('images/background.png');
-  opacity: 0.5;
-
+ol {
+  text-align: center;
+}
+li {
+  text-align: center;
 }
